--- a/finimalism10.11.css
+++ b/finimalism10.11.css
@@ -1714,6 +1714,7 @@ progress::-webkit-progress-value {
 }
 
 .cardOverlayContainer:hover,
+.cardOverlayContainer:focus,
 .dialog,
 .toast,
 .raised.homeLibraryButton:hover {
@@ -4025,7 +4026,13 @@ a[href*="shokoanime.com"] {
 .layout-tv .card.show-focus:focus {
   transform: scale(0.95);
   transition: transform 0.1s ease;
-  filter: drop-shadow(0em -0.1em 0.35em rgba(255, 255, 255, 0.75)) !important;
+}
+
+.layout-tv .card.show-focus:focus .cardImageContainer,
+.layout-tv .listItem-focusscale:focus {
+	box-shadow: 0px 0px 5px #fff9;
+	border: solid 1px #fff;
+	border: solid 1px #fff !important;
 }
 
 .layout-tv .detailPageWrapperContainer {
